some visual fixes

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -50,7 +50,7 @@ textarea {
 }
 
 .statusContent {
-    margin-left: 5px;
+    /*margin-left: 5px;*/
 }
 
 .date {
@@ -59,7 +59,7 @@ textarea {
 }
 
 .comments {
-    margin-left: 10px;
+    background-color: #9acfea;
 }
 
 .dropdown-menu li form {
