--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -12,7 +12,8 @@
                     <form th:action="@{'/userprofile/' + ${userStatus.userId} + '/editstatus/' + ${userStatus.statusId}}"
                           th:object="${userStatus}" method="post">
                         <p th:text="*{date}"></p>
-                        <textarea id="editStatus" th:text="*{content}" th:field="*{content}"></textarea>
+                        <textarea id="editStatus" class="form-control" th:text="*{content}"
+                                  th:field="*{content}"></textarea>
                         <button class="btn btn-default" type="submit">Done</button>
                     </form>
                     <form th:action="@{'/userprofile/' + ${userStatus.userId}}" method="get">
