--- a/src/main/resources/templates/createGroup.html
+++ b/src/main/resources/templates/createGroup.html
@@ -8,8 +8,8 @@
         <div class="col-md-3">
         </div>
         <div class="col-md-6">
-            <input class="form-control" type="text"/>
-            <textarea class="groupDescription"></textarea>
+            <input class="form-control" type="text" placeholder="Name of group"/>
+            <textarea class="form-control" placeholder="Description of group"></textarea>
             <button class="btn btn-primary" type="submit">Create</button>
         </div>
     </div>
