--- a/src/main/resources/templates/editComment.html
+++ b/src/main/resources/templates/editComment.html
@@ -13,7 +13,8 @@
                           th:action="@{'/userprofile/' + ${editComment.userId} + '/editcomment/' + ${editComment.commentId}}"
                           method="post">
                         <p th:text="*{date}"></p>
-                        <textarea id="editComment" th:text="*{content}" th:field="*{content}"></textarea>
+                        <textarea id="editComment" class="form-control" th:text="*{content}"
+                                  th:field="*{content}"></textarea>
                         <button class="btn btn-default" type="submit">Done</button>
                     </form>
                     <form th:action="@{'/userprofile/' + ${editComment.userId}}" method="get">
