--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -50,7 +50,16 @@ textarea {
 }
 
 .statusContent {
-    /*margin-left: 5px;*/
+
+}
+
+.comment {
+    margin-left: 10px;
+    padding-top: 5px;
+}
+
+.commentContent {
+    background-color: white;
 }
 
 .date {
