--- a/src/main/resources/templates/createGroup.html
+++ b/src/main/resources/templates/createGroup.html
@@ -8,9 +8,11 @@
         <div class="col-md-3">
         </div>
         <div class="col-md-6">
-            <input class="form-control" type="text" placeholder="Name of group"/>
-            <textarea class="form-control" placeholder="Description of group"></textarea>
-            <button class="btn btn-primary" type="submit">Create</button>
+            <form th:action="@{/creategroup}" th:object="${createGroup}" method="post">
+                <input class="form-control" type="text" placeholder="Name of group" th:field="*{name}"/>
+                <textarea class="form-control" placeholder="Description of group" th:field="*{description}"></textarea>
+                <button class="btn btn-primary" type="submit">Create</button>
+            </form>
         </div>
     </div>
 </body>
