--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -10,11 +10,11 @@
                 <button class="btn btn-default" type="submit">Create group</button>
             </form>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-6">
             <h1>Your groups:</h1>
-            <ul class="groups">
-                <li class="group">
-
+            <ul class="groups" th:object="${groups}">
+                <li class="group" th:each="group : ${groups}" th:text="${group.name}" >
+                    
                 </li>
             </ul>
         </div>
