--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -13,8 +13,9 @@
         <div class="col-md-6">
             <h1>Your groups:</h1>
             <ul class="groups" th:object="${groups}">
-                <li class="group" th:each="group : ${groups}" th:text="${group.name}" >
-                    
+                <li class="group" th:each="group : ${groups}">
+                    <form th:action="@{'/group/' + ${group.id}}" method="get" class="getGroupForm"></form>
+                    <a href="#" class="groupName" th:text="${group.name}"></a>
                 </li>
             </ul>
         </div>
