--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -4,6 +4,16 @@
 <body>
 <nav th:replace="navbar :: navbar"></nav>
 <div id="content" class="container">
-
+    <div class="row">
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-6">
+            <h1 th:text="${group.name}"></h1>
+        </div>
+        <div class="col-md-3 groupInformation">
+            <h6><b>Group description</b></h6>
+            <p th:text="${group.description}"></p>
+        </div>
+    </div>
 </body>
 </html>
