--- a/src/main/resources/templates/groupMembers.html
+++ b/src/main/resources/templates/groupMembers.html
@@ -16,14 +16,15 @@
                     <button class="btn btn-default" type="submit">Leave group</button>
                 </form>
             </div>
-            <div>
-                <form th:action="@{'/group/' + ${group.id} + '/members'}" method="get">
-                    <button class="btn btn-default" type="submit">Members</button>
-                </form>
-            </div>
         </div>
         <div class="col-md-6">
             <h1 th:text="${group.name}"></h1>
+            <h2>Members:</h2>
+            <ul th:object="${members}">
+                <li th:each="user : ${members}">
+                    <a th:text="${user.firstName + ' ' + user.lastName}"></a>
+                </li>
+            </ul>
         </div>
         <div class="col-md-3 groupInformation">
             <h6><b>Group description</b></h6>
