--- a/src/main/resources/templates/groupMembers.html
+++ b/src/main/resources/templates/groupMembers.html
@@ -16,13 +16,21 @@
                     <button class="btn btn-default" type="submit">Leave group</button>
                 </form>
             </div>
+            <div>
+                <form th:action="@{/groups}">
+                    <button type="submit" class="btn btn-default">Groups</button>
+                </form>
+            </div>
         </div>
         <div class="col-md-6">
-            <h1 th:text="${group.name}"></h1>
+            <form id="groupNameForm" th:action="@{'/group/' + ${group.id}}" method="get"></form>
+            <a class="groupName" href="#" onclick="document.getElementById('groupNameForm').submit()" th:text="${group.name}"></a>
             <h2>Members:</h2>
-            <ul th:object="${members}">
+            <ul class="members" th:object="${members}">
                 <li th:each="user : ${members}">
-                    <a th:text="${user.firstName + ' ' + user.lastName}"></a>
+                    <form action="#" th:action="@{'/userprofile/' + ${user.id}}" method="get"
+                          class="getProfileForm"></form>
+                    <a href="#" class="getProfile" th:text="${user.firstName + ' ' + user.lastName}"></a>
                 </li>
             </ul>
         </div>
