admin of group can make other users an admin in group

--- a/src/main/resources/templates/groupMembers.html
+++ b/src/main/resources/templates/groupMembers.html
@@ -44,6 +44,11 @@
                                     <a th:if="${isAdmin && user.user.id != loggedUserId}" href="#" class="deleteUser">Delete from group</a>
                                     <a th:if="${user.user.id == loggedUserId}" href="#" class="deleteUser">Leave group</a>
                                 </li>
+                                <li th:if="${isAdmin && !user.admin}">
+                                    <form th:action="@{'/makeadmin/' + ${group.id} +  '/' + ${user.user.id}}"
+                                          method="post" class="makeAdminForm"></form>
+                                    <a class="makeAdmin" href="#">Make admin</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
