--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -124,7 +124,7 @@ textarea {
     word-wrap: break-word;
 }
 
-.members {
+.membersList {
     padding-left: 0px;
     list-style-type: none;
 }
@@ -135,7 +135,7 @@ a.groupName {
     color: #0f0f0f;
 }
 
-#member {
+.member {
     margin-bottom: 20px;
     clear: right;
 }
