--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -138,4 +138,7 @@ a.groupName {
 .member {
     margin-bottom: 20px;
     clear: right;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
