--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -28,8 +28,7 @@
             </div>
         </div>
         <div class="col-md-6">
-            <form id="groupNameForm" th:action="@{'/group/' + ${group.id}}" method="get"></form>
-            <a class="groupName" href="#" onclick="document.getElementById('groupNameForm').submit()" th:text="${group.name}"></a>
+            <a class="groupName" th:href="@{'/group/' + ${group.id}}" th:text="${group.name}"></a>
         </div>
         <div class="col-md-3 groupInformation">
             <h6><b>Group description</b></h6>
