--- a/src/main/resources/templates/groupMembers.html
+++ b/src/main/resources/templates/groupMembers.html
@@ -23,9 +23,7 @@
             </div>
         </div>
         <div class="col-md-6">
-            <form id="groupNameForm" th:action="@{'/group/' + ${group.id}}" method="get"></form>
-            <a class="groupName" href="#" onclick="document.getElementById('groupNameForm').submit()"
-               th:text="${group.name}"></a>
+            <a class="groupName" th:href="@{'/group/' + ${group.id}}" th:text="${group.name}"></a>
             <div class="admins">
                 <h2>Admins:</h2>
                 <ul class="membersList" th:object="${members}">
