--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -6,26 +6,32 @@
 <div id="content" class="container">
     <div class="row">
         <div class="col-md-3">
-            <div th:if="${!member}">
-                <form th:object="${group}" th:action="@{'/joingroup/' + ${group.id}}" method="post">
-                    <button class="btn btn-default" type="submit">Join group</button>
-                </form>
-            </div>
-            <div th:if="${member}">
-                <form th:object="${group}" th:action="@{'/leavegroup/' + ${group.id}}" method="post">
-                    <button class="btn btn-default" type="submit">Leave group</button>
-                </form>
-            </div>
-            <div>
-                <form th:action="@{'/group/' + ${group.id} + '/members'}" method="get">
-                    <button class="btn btn-default" type="submit">Members</button>
-                </form>
-            </div>
-            <div>
-                <form th:action="@{/groups}">
-                    <button type="submit" class="btn btn-default">Groups</button>
-                </form>
-            </div>
+            <p>Actions for the group</p>
+            <ul>
+                <li th:if="${!member}">
+                    <form th:object="${group}" th:action="@{'/joingroup/' + ${group.id}}" method="post">
+                        <button class="btn btn-default" type="submit">Join group</button>
+                    </form>
+                </li>
+                <li th:if="${member}">
+                    <form th:object="${group}" th:action="@{'/leavegroup/' + ${group.id}}" method="post">
+                        <button class="btn btn-default" type="submit">Leave group</button>
+                    </form>
+                </li>
+                <li>
+                    <form th:action="@{'/group/' + ${group.id} + '/members'}" method="get">
+                        <button class="btn btn-default" type="submit">Members</button>
+                    </form>
+                </li>
+            </ul>
+            <p>General actions</p>
+            <ul>
+                <li>
+                    <form th:action="@{/groups}">
+                        <button type="submit" class="btn btn-default">Groups</button>
+                    </form>
+                </li>
+            </ul>
         </div>
         <div class="col-md-6">
             <a class="groupName" th:href="@{'/group/' + ${group.id}}" th:text="${group.name}"></a>
